Fix output div overflow #9

--- a/plug-n-code/src/app/index/index.component.sass
+++ b/plug-n-code/src/app/index/index.component.sass
@@ -65,20 +65,27 @@
       +display-flex
       +flex-basis(93%)
       +flex-direction-column
-      +size(100%)
 
       #editor
-        background-color: $gray
-        +flex-basis(70%)
+        +flex(1, 0, 1em)
 
       #output
-        +flex-basis(30%)
+        +display-inline-flex
+        +flex-direction-column
+        +flex(1, 0, 1em)
+        overflow: auto
+        +size(100%)
 
-        .output-tab-content
-          font-size: .8em
-          height: 20vh
-          margin: 0 !important
-          overflow: auto
+
+        #output-tab-content
+          font-size: .6em
+          overflow-y: auto
+          overflow-x: hidden
+          +size(100%)
+
+          .segment
+            margin: 0 !important
+            min-height: 100%
 
 @media only screen and (max-width: 768px)
 
